--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
     --fs-xxl: clamp(.5rem, 5vw + .1rem, 2rem);
     --fs-xl: clamp();
-    --fs-l: clamp();
+    --fs-l: clamp(1rem, 2vw + .25rem, 1.75rem);
     --fs-m: 1rem;
     --fs-s: .8rem;
 
