--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -35,6 +35,8 @@
     justify-items: right;
 }
 
+
+
 .expanding-div-text-container {
     padding-bottom: 0px;
     padding-top: 40%;
@@ -42,6 +44,15 @@
     justify-items: right;
     height: auto;
     
+}
+
+@media screen and (min-width: 1850px) {
+    .expanding-div-container {
+        padding-top: 30%;
+    }
+    .expanding-div-text-container {
+        padding-top: 30%;
+    }
 }
 
 .expanding-div-text-title {
